fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
-html, body {
-    height:100%;
-    padding-top:70px;
+html {
+    position: relative;
+    min-height:100%;
+}
+body {
+    margin-bottom:100px;
+    padding-top:120px;
 }
 .custom-navbar {
     background-color: #973131;
@@ -23,6 +27,18 @@ nav p {
     background-color: #E0A75E;
     color: black;
 }
+.container-fluid {
+    flex:1;
+}
 .blockquote {
+    background-color:#F9D689;
+}
+.blockquote-footer {
     background-color:#F5E7B2;
+}
+.footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:0px;
 }
